--- a/cmp2/index.html
+++ b/cmp2/index.html
@@ -15,21 +15,11 @@
 
       <!-- Content -->
       <div class="hero__content">
-        <h2 class="hero__title">
-          Ready to get <br>serious about trading?
-        </h2>
-
-        <p class="hero__description">
-          Welcome to Australia's No.1 CFD trading platform.
-        </p>
-
+        <h2 class="hero__title">Ready to get serious&nbsp;about trading?</h2>
+        <p class="hero__description">Welcome to Australia's No.1 CFD trading platform.<sup>1</sup></p>
         <div class="hero__actions">
-          <a href="#" class="hero__button hero__button--primary">
-            Create live account
-          </a>
-          <a href="#" class="hero__button hero__button--secondary">
-            Try demo account
-          </a>
+          <a href="#" class="hero__button hero__button--primary">Create live account</a>
+          <a href="#" class="hero__button hero__button--secondary">Try demo account</a>
         </div>
       </div>
 
@@ -40,7 +30,6 @@
           <img src="/cmp2/assets/images/hero-layout-desk.png" alt="Trading platform preview" />
         </picture>
       </div>
-
     </div>
   </section>
 </body>
