seond hero banner updates

--- a/cmp2/index.html
+++ b/cmp2/index.html
@@ -32,6 +32,32 @@
       </div>
     </div>
   </section>
+
+
+
+  <section class="hero" data-component="hero">
+    <div class="hero__container">
+
+      <!-- Content -->
+      <div class="hero__content">
+        <h2 class="hero__title">CFD trading</h2>
+        <p class="hero__description">If you see opportunity in the world around yiu, trade CFDs with Australia's No.1 CFD provider.<sup>1</sup> Made for traders who want to take advantage of raising and falling markets.</p>
+        <div class="hero__actions">
+          <a href="#" class="hero__button hero__button--primary">Create live account</a>
+          <a href="#" class="hero__button hero__button--secondary">Try demo account</a>
+        </div>
+      </div>
+
+      <!-- Media -->
+      <div class="hero__media">
+        <picture>
+          <source srcset="/cmp2/assets/images/cfd-trading-mob.png" media="(max-width: 768px)" />
+          <img src="/cmp2/assets/images/cfd-trading-desk.png" alt="CFD trading" />
+        </picture>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
