--- a/cmp2/index.html
+++ b/cmp2/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  <div><img src="/cmp2/assets/images/www.ig.com_au.png" alt="Hero image" width="100%"/></div>
+  <div><img src="/cmp2/assets/images/www.ig.com_au.png" alt="Hero image" width="100%" /></div>
   <section class="hero" data-component="hero">
     <div class="hero__container">
 
       <!-- Content -->
       <div class="hero__content">
-        <h2 class="hero__title">Ready to get serious&nbsp;about trading?</h2>
+        <h1 class="hero__title">Ready to get serious&nbsp;about trading?</h1>
         <p class="hero__description">Welcome to Australia's No.1 CFD trading platform.<sup>1</sup></p>
         <div class="hero__actions">
           <a href="#" class="hero__button hero__button--primary">Create live account</a>
@@ -41,7 +41,7 @@
 
       <!-- Content -->
       <div class="hero__content">
-        <h2 class="hero__title">CFD trading</h2>
+        <h1 class="hero__title">CFD trading</h1>
         <p class="hero__description">If you see opportunity in the world around yiu, trade CFDs with Australia's No.1 CFD provider.<sup>1</sup> Made for traders who want to take advantage of raising and falling markets.</p>
         <div class="hero__actions">
           <a href="#" class="hero__button hero__button--primary">Create live account</a>
@@ -64,8 +64,9 @@
 
       <!-- Content -->
       <div class="hero__content">
-        <h2 class="hero__title">CFD trading</h2>
-        <p class="hero__description">If you see opportunity in the world around yiu, trade CFDs with Australia's No.1 CFD provider.<sup>1</sup> Made for traders who want to take advantage of raising and falling markets.</p>
+        <h1 class="hero__title">Shared trading</h1>
+        <p class="hero__description">Trade Australian and international shares commission-free (0.7% FX fee applies to international trades)1 using our award-winning platform.<sup>2</sup>
+ </p>
         <div class="hero__actions">
           <a href="#" class="hero__button hero__button--primary">Create live account</a>
           <a href="#" class="hero__button hero__button--secondary">Try demo account</a>
@@ -81,8 +82,65 @@
       </div>
     </div>
   </section>
-<div><img src="/cmp2/assets/images/www.ig.com_au-bottom.png" alt="Hero image" width="100%"/></div>
-<div><img src="/cmp2/assets/images/au-footer.png" alt="Hero image" width="100%"/></div>
+
+
+  <section class="hero non-gradient" data-component="hero">
+    <div class="hero__container  hero--60-40">
+
+      <!-- Content -->
+      <div class="hero__content">
+        <h1 class="hero__title">Turn ambition into reality</h1>
+        <p class="hero__description">Start trading online with Australia’s No.1 CFD provider<sup>1</sup></p>
+        <ul class="hero__list">
+          <li>Forex, indices, shares, commodities, crypto, and more</li>
+          <li>Trade 24/7 on unrivalled weekend markets incl. GBP/USD, EUR/USD, USD/JPY, global indices etc. <sup>2</sup>
+          </li>
+          <li>Easy-to-use platforms</li>
+        </ul>
+        <div class="hero__actions">
+          <a href="#" class="hero__button hero__button--primary">Create live account</a>
+          <a href="#" class="hero__button hero__button--secondary">Try demo account</a>
+        </div>
+      </div>
+
+      <!-- Media -->
+      <div class="hero__media">
+        <picture>
+          <source srcset="/cmp2/assets/images/cfd-trading-mob.png" media="(max-width: 768px)" />
+          <img src="/cmp2/assets/images/cfd-trading-desk.png" alt="CFD trading" />
+        </picture>
+      </div>
+    </div>
+  </section>
+
+
+    <section class="hero non-gradient" data-component="hero">
+    <div class="hero__container hero--40-60">
+
+      <!-- Content -->
+      <div class="hero__content">
+        <h1 class="hero__title"><span>IG Share trading</span> No commissions. No nonsense.</h1>
+        <p class="hero__description">Real change starts with $0 commission charges on Aussie and international shares (0.7% FX fee applies for international trades).<sup>1</sup> 
+        </p>
+        <div class="hero__actions">
+          <a href="#" class="hero__button hero__button--primary">Create live account</a>
+          <a href="#" class="hero__button hero__button--secondary">Try demo account</a>
+        </div>
+      </div>
+
+      <!-- Media -->
+      <div class="hero__media">
+        <picture>
+          <source srcset="https://a.c-dn.net/c/content/dam/publicsites/igcom/au/images/APAC_Ashes_Landing_page_03_Hero_image.png/jcr:content/renditions/rendition-480.webp" media="(max-width: 768px)" />
+          <img src="https://a.c-dn.net/c/content/dam/publicsites/igcom/au/images/APAC_Ashes_Landing_page_03_Hero_image.png/jcr:content/renditions/rendition-1200.webp" alt="CFD trading" />
+        </picture>
+      </div>
+    </div>
+  </section>
+
+
+  <div><img src="/cmp2/assets/images/www.ig.com_au-bottom.png" alt="Hero image" width="100%" /></div>
+  <div><img src="/cmp2/assets/images/au-footer.png" alt="Hero image" width="100%" /></div>
 </body>
 
 </html>
