--- a/cmp1/index.html
+++ b/cmp1/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="stylesheet" href="/cmp1/assets/style.css" />
   <title>carousel-app</title>
 </head>
 
@@ -88,7 +88,7 @@
 
 
 
-  <script type="module" src="/assets/main.js"></script>
+  <script type="module" src="/cmp1/assets/main.js"></script>
 </body>
 
 </html>
