--- a/cmp3/index.html
+++ b/cmp3/index.html
@@ -69,12 +69,268 @@
       <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
 
     </section>
+<br><br><br><hr><br><br><br>
+
+<section class="platform-carousel" data-component="platform-carousel">
+      <h1 class="platform-carousel__main-heading">Browse our award-winning platforms<sup>1,3</sup></h1>
+      <button class="platform-carousel__nav platform-carousel__nav--prev" aria-label="Previous slide">‹</button>
+      <div class="platform-carousel__track">
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/ios-device.png" alt="iOS">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">iOS</h3>
+            <p class="platform-carousel__slide-description">Trade anywhere with our intuitive iPhone app, designed for
+              speed and control.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/android-device.png" alt="Android">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Android</h3>
+            <p class="platform-carousel__slide-description">All the tools you need, optimised for Android.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/web-device.png" alt="Web">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Web</h3>
+            <p class="platform-carousel__slide-description">Access advanced trading feature on our fast, secure web
+              platform.</p>
+          </div>
+        </div>        
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+      </div>
+      <!-- ADD THIS NEW TABS SECTION -->
+      <div class="platform-carousel__tabs"></div>
+      <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
+
+    </section>
+
+    <br><br><br><hr><br><br><br>
+
+<section class="platform-carousel" data-component="platform-carousel">
+      <h1 class="platform-carousel__main-heading">Browse our award-winning platforms<sup>1,3</sup></h1>
+      <button class="platform-carousel__nav platform-carousel__nav--prev" aria-label="Previous slide">‹</button>
+      <div class="platform-carousel__track">
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/ios-device.png" alt="iOS">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">iOS</h3>
+            <p class="platform-carousel__slide-description">Trade anywhere with our intuitive iPhone app, designed for
+              speed and control.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/android-device.png" alt="Android">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Android</h3>
+            <p class="platform-carousel__slide-description">All the tools you need, optimised for Android.</p>
+          </div>
+        </div>        
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+      </div>
+      <!-- ADD THIS NEW TABS SECTION -->
+      <div class="platform-carousel__tabs"></div>
+      <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
+
+    </section>
+
+    <br><br><br><hr><br><br><br>
+
+<section class="platform-carousel" data-component="platform-carousel">
+      <h1 class="platform-carousel__main-heading">Browse our award-winning platforms<sup>1,3</sup></h1>
+      <button class="platform-carousel__nav platform-carousel__nav--prev" aria-label="Previous slide">‹</button>
+      <div class="platform-carousel__track">
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/ios-device.png" alt="iOS">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">iOS</h3>
+            <p class="platform-carousel__slide-description">Trade anywhere with our intuitive iPhone app, designed for
+              speed and control.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+      </div>
+      <!-- ADD THIS NEW TABS SECTION -->
+      <div class="platform-carousel__tabs"></div>
+      <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
+
+    </section>
+
+    <br><br><br><hr><br><br><br>
+
+<section class="platform-carousel" data-component="platform-carousel">
+      <h1 class="platform-carousel__main-heading">Browse our award-winning platforms<sup>1,3</sup></h1>
+      <button class="platform-carousel__nav platform-carousel__nav--prev" aria-label="Previous slide">‹</button>
+      <div class="platform-carousel__track">
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/ios-device.png" alt="iOS">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">iOS</h3>
+            <p class="platform-carousel__slide-description">Trade anywhere with our intuitive iPhone app, designed for
+              speed and control.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/android-device.png" alt="Android">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Android</h3>
+            <p class="platform-carousel__slide-description">All the tools you need, optimised for Android.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/web-device.png" alt="Web">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Web</h3>
+            <p class="platform-carousel__slide-description">Access advanced trading feature on our fast, secure web
+              platform.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/mt4-device.png" alt="MT4">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">MT4</h3>
+            <p class="platform-carousel__slide-description">Trade CFDs using the powerful, professional MetaTrader 4.
+            </p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+      </div>
+      <!-- ADD THIS NEW TABS SECTION -->
+      <div class="platform-carousel__tabs"></div>
+      <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
+
+    </section>
+
+    <br><br><br><hr><br><br><br>
+
+<section class="platform-carousel" data-component="platform-carousel">
+      <h1 class="platform-carousel__main-heading">Browse our award-winning platforms<sup>1,3</sup></h1>
+      <button class="platform-carousel__nav platform-carousel__nav--prev" aria-label="Previous slide">‹</button>
+      <div class="platform-carousel__track">
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/ios-device.png" alt="iOS">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">iOS</h3>
+            <p class="platform-carousel__slide-description">Trade anywhere with our intuitive iPhone app, designed for
+              speed and control.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/android-device.png" alt="Android">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Android</h3>
+            <p class="platform-carousel__slide-description">All the tools you need, optimised for Android.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/web-device.png" alt="Web">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">Web</h3>
+            <p class="platform-carousel__slide-description">Access advanced trading feature on our fast, secure web
+              platform.</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/mt4-device.png" alt="MT4">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">MT4</h3>
+            <p class="platform-carousel__slide-description">Trade CFDs using the powerful, professional MetaTrader 4.
+            </p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+        <div class="platform-carousel__slide">
+          <div class="platform-carousel__slide-media">
+            <img src="assets/images/tradingview-device.png" alt="Trading View">
+          </div>
+          <div class="platform-carousel__slide-body">
+            <h3 class="platform-carousel__slide-title">TradingView</h3>
+            <p class="platform-carousel__slide-description">Analyse and trade directly from TradingView with IG
+              integration</p>
+          </div>
+        </div>
+      </div>
+      <!-- ADD THIS NEW TABS SECTION -->
+      <div class="platform-carousel__tabs"></div>
+      <button class="platform-carousel__nav platform-carousel__nav--next" aria-label="Next slide">›</button>
+
+    </section>
+
   </div>
-
-
-
-
-
 
   <script type="module" src="/cmp3/assets/main.js"></script>
 </body>
